<resources>
    <string name="app_name">StudyWithMe</string>
    <string name="display_app_name">Study with me!</string>
    <string name="please_input_task_name">タスク名を入力してください</string>
    <string name="task_name">タスク名</string>
    <string name="start_button_text">START</string>
    <string name="back_to_register">登録画面に戻る</string>
    <string name="already_have_account">アカウントを持っていますか？</string>
    <string name="register">登録</string>
    <string name="login">ログイン</string>
    <string name="select_photo_button_string">アイコンを選択</string>
    <string name="logout_string">ログアウト</string>
    <string name="study_alone_textView">一人で勉強を開始</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>