<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewView.TaskNameInputFragment" >

    <TextView
        android:id="@+id/pleaseInputTaskName_textView_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_input_task_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55"/>

    <EditText
        android:id="@+id/taskName_editText_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/task_name"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="@+id/friendName_textView_fragment"
        app:layout_constraintStart_toStartOf="@+id/friendName_textView_fragment"
        app:layout_constraintTop_toBottomOf="@+id/pleaseInputTaskName_textView_fragment" />

    <Button
        android:id="@+id/startTask_btn_fragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/start_button_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/taskName_editText_fragment"
        app:layout_constraintStart_toStartOf="@+id/taskName_editText_fragment"
        app:layout_constraintTop_toBottomOf="@+id/taskName_editText_fragment" />

    <TextView
        android:id="@+id/friendName_textView_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/study_alone_textView"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"/>
</androidx.constraintlayout.widget.ConstraintLayout>