<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appname_textview_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/username_edittext_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        android:paddingLeft="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_edittext_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="email"
        android:inputType="textEmailAddress"
        android:paddingLeft="16dp"
        app:layout_constraintStart_toStartOf="@+id/username_edittext_register"
        app:layout_constraintTop_toBottomOf="@+id/username_edittext_register" />

    <EditText
        android:id="@+id/password_edittext_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Password"
        android:paddingLeft="16dp"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/email_edittext_register"
        app:layout_constraintTop_toBottomOf="@+id/email_edittext_register" />

    <Button
        android:id="@+id/register_button_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/password_edittext_register"
        app:layout_constraintStart_toStartOf="@+id/password_edittext_register"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext_register" />

    <TextView
        android:id="@+id/already_have_account_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/already_have_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_button_register" />
</androidx.constraintlayout.widget.ConstraintLayout>