<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OldView.RegisterActivity">

    <EditText
        android:id="@+id/username_edittext_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        android:paddingLeft="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_photo_button_register" />

    <EditText
        android:id="@+id/email_edittext_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="email"
        android:inputType="textEmailAddress"
        android:paddingLeft="16dp"
        app:layout_constraintStart_toStartOf="@+id/username_edittext_register"
        app:layout_constraintTop_toBottomOf="@+id/username_edittext_register" />

    <EditText
        android:id="@+id/password_edittext_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Password"
        android:paddingLeft="16dp"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/email_edittext_register"
        app:layout_constraintTop_toBottomOf="@+id/email_edittext_register" />

    <Button
        android:id="@+id/register_button_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/password_edittext_register"
        app:layout_constraintStart_toStartOf="@+id/password_edittext_register"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext_register" />

    <TextView
        android:id="@+id/already_have_account_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/already_have_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_button_register" />

    <Button
        android:id="@+id/select_photo_button_register"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/rounded_select_photo_button"
        android:text="@string/select_photo_button_string"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.247" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/select_photo_imageView_register"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="@+id/select_photo_button_register"
        app:layout_constraintEnd_toEndOf="@+id/select_photo_button_register"
        app:layout_constraintStart_toStartOf="@+id/select_photo_button_register"
        app:layout_constraintTop_toTopOf="@+id/select_photo_button_register"
        tools:srcCompat="@tools:sample/avatars"
        app:civ_border_width="2dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>